@@ -520,7 +520,7 @@
 //
 // Recommended setting: 1 if your compiler supports it, if it doesn't please
 // contribute us a makefile for src/regex for it
-#define wxUSE_REGEX       0
+#define wxUSE_REGEX       1
 
 // wxSystemOptions class
 #define wxUSE_SYSTEM_OPTIONS 1
